...
import com.ryankoech.krypto.common.presentation.theme.KryptoTheme
import com.ryankoech.krypto.common.presentation.util.KryptoPreview
import com.ryankoech.krypto.feature_home.presentation.theme.teaGreen200
import com.ryankoech.krypto.feature_home.presentation.theme.maroon50
import com.ryankoech.krypto.feature_home.R

const val HOME_SCREEN_ACTION_ITEM_WIPE_WALLET = "home_screen_action_item_wipe_wallet"

@Composable
fun HomeScreenActions(
    onTransferInClick : () -> Unit,
    onTransferOutClick : () -> Unit,
    onWipeWalletClick : () -> Unit,
...
