...
import com.ryankoech.krypto.feature_home.data.dto.owned_coin.getBalance
import com.ryankoech.krypto.feature_home.data.dto.owned_coin.getChange
import com.ryankoech.krypto.feature_home.data.repository.FakeOwnedCoins
import com.ryankoech.krypto.feature_home.presentation.util.CreditCardDetails

const val TEST_TAG_HOME_SCREEN_SUCCESS_WITH_DATA = "test_tag_home_screen_success_with_data"
const val TEST_TAG_HOME_SCREEN_SUCCESS_WITH_DATA_CONFIRM_DIALOG = "test_tag_home_screen_success_with_data_confirm_dialog"

@Composable
fun HomeScreenSuccessWithData(
    ownedCoins : List<OwnedCoinDto>,
    displayCurrencies : List<DisplayCurrencyDto>,
    onTransferInClick : () -> Unit,
...
